build: update doc after logout and refresh routes
