# groupomania-openapi-doc.json
@@ -20,6 +20,9 @@
   ],
   "servers": [
     {
+      "url": "https://localhost:3000"
+    },
+    {
       "url": "http://localhost:3000"
     }
   ],
@@ -35,7 +38,7 @@
           "auth"
         ],
         "summary": "Connexion of a user",
-        "description": "Check of the user identification informations, return the id of the user from the database and a signed JSON web token (containing the id of the user). The number of (failed) attempts to connect for a user is limited (in the time as well).\n",
+        "description": "Check of the user identification informations, return the id of the user from the database and 2 signed JSON web tokens (an access token, and a refresh token). If a refresh token is in the authorization headers of the request, it is revoked from the database. The number of (failed) attempts to connect for a user is limited (in the time as well).\n",
         "requestBody": {
           "required": true,
           "content": {
@@ -46,6 +49,11 @@
             }
           }
         },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK",
@@ -56,17 +64,22 @@
                   "properties": {
                     "userId": {
                       "type": "string",
-                      "description": "ID de l'utilisateur (depuis la base de données)"
+                      "description": "ID of the user (from the database)"
                     },
                     "token": {
                       "type": "string",
-                      "description": "token web JSON signé (contenant également l'ID de l'utilisateur)"
+                      "description": "signed access token (containing the user ID)"
+                    },
+                    "refreshToken": {
+                      "type": "string",
+                      "description": "signed refresh token (containing the user ID and the refresh token ID stored in the database)"
                     }
                   }
                 },
                 "example": {
                   "userId": "e5268c386c9b17c39bd6a17d",
-                  "token": "..."
+                  "token": "...",
+                  "refreshToken": "..."
                 }
               }
             }
@@ -83,6 +96,100 @@
           },
           "429": {
             "description": "Too Many Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorMessage"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/auth/logout": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "Disconnexion of a user to revoke the current refresh token",
+        "description": "Checks the refresh token payload and revokes its ID in the database, so other users with the same refresh token ID won't be able to get access tokens from this refresh token ID.\n",
+        "responses": {
+          "204": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorMessage"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/errorMessage"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/auth/refresh": {
+      "post": {
+        "tags": [
+          "auth"
+        ],
+        "summary": "Retrieve a new access token from a refresh token",
+        "description": "Checks the refresh token validity and its validity in the database, and sends back a new access token and a new refresh token if all is fine. Else, revokes the refresh token ID in the database, so other users with the same refresh token ID won't be able to get access tokens from this refresh token ID.\n",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "userId": {
+                      "type": "string",
+                      "description": "ID of the user (from the database)"
+                    },
+                    "accessToken": {
+                      "type": "string",
+                      "description": "signed access token (containing the user ID)"
+                    },
+                    "refreshToken": {
+                      "type": "string",
+                      "description": "signed refresh token (containing the user ID and the refresh token ID stored in the database)"
+                    }
+                  }
+                },
+                "example": {
+                  "userId": "e5268c386c9b17c39bd6a17d",
+                  "accessToken": "...",
+                  "refreshToken": "..."
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
             "content": {
               "application/json": {
                 "schema": {
@@ -121,6 +228,7 @@
             }
           }
         },
+        "security": [],
         "responses": {
           "201": {
             "description": "OK",
